<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/publish_back_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/back"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/publish"
            android:textSize="16sp" />

        <Button
            android:id="@+id/publish_send_btn"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="36dp"
            android:layout_height="24dp"
            android:background="@drawable/button_selector"
            android:text="@string/send"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <EditText
            android:id="@+id/publish_weibo_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/share"
            android:textSize="16sp" />

        <include
            android:id="@+id/include_transmit_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            layout="@layout/comments_item_footer"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/publish_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/publish_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/type_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/withcomment"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/publish_image_choose"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/compose_toolbar_picture" />

        <ImageButton
            android:id="@+id/publish_image_canmera"
            style="@android:style/DeviceDefault.ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/businesscard_icon_camera" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/publish_type"
            android:layout_width="30dp"
            android:layout_height="37dp"
            android:layout_gravity="end"
            android:layout_weight="0.59" />
    </LinearLayout>

</LinearLayout>