<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/usr_back" >

    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:background="@drawable/control_back" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home_focus" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstpager"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/message_losefocus" />

            <TextView
                android:id="@+id/weibosource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center" >

            <ImageView
                android:id="@+id/publish_weibo_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/writer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_losefucus" />

            <TextView
                android:id="@+id/weiboNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user_losefocus" />

            <TextView
                android:id="@+id/destruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/me"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/control"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

    </FrameLayout>

</RelativeLayout>