<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <LinearLayout
            android:id="@+id/transmit_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/bg_tran2gray_sel" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/transmit" />

            <TextView
                android:id="@+id/transmitNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transmit"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:id="@+id/comment_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/bg_tran2gray_sel" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/comments" />

            <TextView
                android:id="@+id/commentsNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/comments"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:background="@color/divider_gray" />

        <LinearLayout
            android:id="@+id/thumbUp_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="@drawable/bg_tran2gray_sel" >

            <ImageView
                android:id="@+id/thumbup_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/thumbup" />

            <TextView
                android:id="@+id/thumbUpNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_gray" />

</LinearLayout>